java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementDefaultMethods1.pass
package org.netbeans.test.java.hints;

/**
 *
 * @author sdedic
 */
public class ImplementDefaultMethods1 implements java.util.Iterator<String> {

    public boolean hasNext() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    public String next() {
        throw new UnsupportedOperationException("Not supported yet.");
    }
    
}
